package theory.behaviour.command.withCommand;

public class AirConditioner {

    public void airconditionOn() {
        System.out.println("Aircondition On");
    }

    public void airconditionOff() {
        System.out.println("Aircondition Off");
    }


    public void temperatureUp() {
        System.out.println("Temperature Up");
    }


    public void temperatureDown() {
        System.out.println("Temperature Down");
    }
}
