package theory.behaviour.command.withCommand;

public interface Command {
    void execute();
}
