package theory.behaviour.command.withCommand;

public class Light {

    public void lightOn() {
        System.out.println("Light on");
    }

    public void lightOff() {
        System.out.println("Light off");
    }

}
